Fixed settings being 10px too wide

--- a/ui/modules/apps/windsOfChange/app.css
+++ b/ui/modules/apps/windsOfChange/app.css
@@ -18,10 +18,10 @@
   border-bottom: solid 1px white;
 }
 #settings {
-  width: calc(100% - 20px);
+  width: calc(100% - 10px);
   height: 300px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
   position: absolute;
   flex-direction: column;
   background-color: rgba(0, 0, 0, 0.6);
